updating for mentee

--- a/src/main/resources/templates/store/customer/details.html
+++ b/src/main/resources/templates/store/customer/details.html
@@ -1,7 +1,7 @@
 <div class="col" layout:fragment="page_content" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
     <div class="vstack gap-3">
         <div>
-            <span th:text="${customer.firstName}"></span>&nbsp;<span th:text="customer.lastName"></span>
+            <span th:text="${customer.firstName}"></span>&nbsp;<span th:text="${customer.lastName}"></span>
         </div>
     </div>
 </div>
