--- a/src/main/resources/templates/store/customers.html
+++ b/src/main/resources/templates/store/customers.html
@@ -2,17 +2,20 @@
      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
     <h1>Customers of the Store</h1>
     <div class="vstack gap-3">
-        <table>
+        <table class="table striped">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
                     <th>Phone num.</th>
+                    <th>&nbsp;</th>
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="customer : ${customers}">
-                    <td th:text="${customer.firstName + ' ' + customer.lastName}"></td>
+                    <td>
+                        <a th:href="@{/store/customer/details/{id}(id=${customer.id})}" th:text="${customer.firstName + ' ' + customer.lastName}"></a>
+                    </td>
                     <td th:text="${customer.email}"></td>
                     <td th:text="${customer.phoneNumber}"></td>
                     <td>
@@ -24,6 +27,6 @@
         </table>
     </div>
     <div class="vstack gap-3">
-        <a th:href="@{/store/customer/add}">add customer</a>
+        <a class="btn btn-primary" th:href="@{/store/customer/add}">add customer</a>
     </div>
 </div>
