--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,7 +26,8 @@
                                 <a class="dropdown-item" th:href="@{/store/customers}">customers</a>
                                 <a class="dropdown-item" th:href="@{/store/customer/add}">new customer...</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" th:href="@{/store/albums}">albums</a>
+                                <a class="dropdown-item" th:href="@{/store/albums}">all albums</a>
+                                <a class="dropdown-item" th:href="@{/store/albums/with_lyrics}">albums w/lyrics</a>
                             </div>
                         </li>
                     </ul>
